# rust-bot-trading

./: Cargo.toml  README.md
src/: common.rs  constant.rs  lib.rs  main.rs  mdl.rs
src/db/: candle.rs  mod.rs
src/indicate/: mod.rs  zigzag.rs
