[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# default-run="cradle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

actix-web = "4"

once_cell = "1.13.1"

bson = { version = "2.3.0", features = ["chrono-0_4"] }

ta-common-rs = { git = "https://github.com/shanjunf/ta-common.git" }

[dependencies.mongodb]
version = "2.3.0"
features = ["tokio-sync"]